# music-teacher

./: .gitignore  LICENSE.md  README.md  analytics_popup.py  analytics_popup_old.py  evaluator.py  evaluator_old.py  flexbox.py  guided_teacher.py  lab.py  main.py  midi_teach.py  midi_utils.py  mt_types.py  optimize_note_matching.py  pyproject.toml  save_system.py  sheet_music.py  sheet_music_renderer.py  synth.py  test.py  test_evaluator.py  visual.py
src/: main.py
src/music_teacher/: __init__.py
src/music_teacher/audio/: synth.py
src/music_teacher/core/: app.py  evaluator.py  guided_teacher.py  midi_teach.py
src/music_teacher/ui/: analytics_popup.py  flexbox.py  sheet_music.py  sheet_music_renderer.py  visual.py
src/music_teacher/utils/: data_types.py  midi_utils.py  save_system.py
