[project]
name = "music-teacher"
version = "0.1.0"
description = "Program to help you learn to play a song on piano"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.6",
    "mido>=1.3.3",
    "music21==9.7.1",
    "pyfluidsynth==1.3.4",
    "pygame>=2.6.1",
    "python-rtmidi==1.5.8",
    "setuptools>=80.9.0",
    "svgelements>=1.9.6",
]
